@@ -17,7 +17,7 @@ package org.drools.compiler.rule.builder;
 
 public interface ConsequenceBuilder {
 
-    Long CONSEQUENCE_SERIAL_UID = new Long(510L);
+    Long CONSEQUENCE_SERIAL_UID = Long.valueOf(510L);
 
     void build(final RuleBuildContext context, String name);
 
